[package]
name = "google-fonts"
version = "0.1.0"
edition = "2021"
keywords = ["font", "google"]
license = "UNLICENSE"

[dependencies]
dirs = "5.0.1"
serde_json = "1.0.120"

[dependencies.gen]
path = "../gen"

[dependencies.reqwest]
version = "0.12.5"
features = ["http2", "rustls-tls", "blocking"]

[dependencies.serde]
version = "1.0.204"
features = ["derive"]

[dependencies.strum]
version = "0.26.3"
features = ["derive", "strum_macros"]

[dev-dependencies]
ttf-parser = "0.24.0"

[build-dependencies]
anyhow = "1.0.86"

[features]
default = ["full"]
full = ["variable", "static"]
static = []
variable = []

[lib]
path = "src/lib.rs"
name = "google_fonts"
edition = "2021"
crate-type = ["lib"]
required-features = []
