[package]
name = "google-fonts"
version = "0.1.1"
edition = "2021"
keywords = [
    "font",
    "google",
    "graphics",
    "true-type",
    "ttf",
]
categories = [
    "api-bindings",
    "graphics",
    "text-processing",
    "rendering",
]
authors = ["Rana Ian"]
repository = "https://github.com/rana/google-fonts"
license = "MIT"
readme = "../README.md"
description = "Download and cache TTF fonts from Google."

[dependencies]
dirs = "5.0.1"
serde_json = "1.0.120"

[dependencies.reqwest]
version = "0.12.5"
features = ["http2", "rustls-tls", "blocking"]

[dependencies.serde]
version = "1.0.204"
features = ["derive"]

[dependencies.strum]
version = "0.26.3"
features = ["derive", "strum_macros"]

[dev-dependencies]
ttf-parser = "0.24.0"

[features]
default = ["full"]
full = ["variable", "static"]
static = []
variable = []

[lib]
path = "src/lib.rs"
name = "google_fonts"
edition = "2021"
crate-type = ["lib"]
required-features = []

[[example]]
path = "examples/main.rs"
name = "main"
edition = "2021"
required-features = []
