[package]
name = "google-fonts"
version = "0.1.4"
edition = "2021"
authors = ["Rana Ian"]
description = "Download and cache TTF fonts from Google."
documentation = "https://docs.rs/google-fonts"
readme = "../README.md"
keywords = ["font", "google", "graphics", "true-type", "ttf"]
categories = ["api-bindings", "graphics", "text-processing", "rendering"]
license = "MIT"
repository = "https://github.com/rana/google-fonts"

[dependencies]
dirs = "5.0.1"
serde_json = "1.0.120"

[dependencies.reqwest]
version = "0.12.5"
features = ["http2", "rustls-tls", "blocking"]

[dependencies.serde]
version = "1.0.204"
features = ["derive"]

[dependencies.strum]
version = "0.26.3"
features = ["derive", "strum_macros"]

[dev-dependencies]
ttf-parser = "0.24.0"

[features]
default = ["variable"]
full = ["variable", "static"]
static = []
variable = []

[lib]
path = "src/lib.rs"
name = "google_fonts"
edition = "2021"
crate-type = ["lib"]
required-features = []

[[example]]
path = "examples/download.rs"
name = "download"
edition = "2021"
required-features = ["full"]

[[example]]
path = "examples/enumerate.rs"
name = "enumerate"
edition = "2021"
required-features = []

[[example]]
path = "examples/serde.rs"
name = "serde"
edition = "2021"
required-features = []
